[tool.poetry]
name = "shortdiary"
version = "1.0.0"
description = ""
authors = ["Lukas Martini <hello@lutoma.org>"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "2.7.18"
Babel = "2.2.0"
Django = "1.8.5"
Pillow = "3.1.1"
YubiOTP = "0.2.1"
amqp = "1.4.9"
anyjson = "0.3.3"
argparse = "1.2.1"
beautifulsoup4 = "4.3.2"
billiard = "3.3.0.23"
celery = "3.1.18"
contextlib2 = "0.5.4"
django-celery = "3.1.17"
django-email-extras = "0.3.2"
django-formtools = "1.0"
django-gravatar2 = "1.4.0"
django-htmlmin = "0.7.0"
django-oauth2-provider = "0.2.6.1"
django-otp = "0.3.4"
django-otp-yubikey = "0.3.3"
django-phonenumber-field = "0.7.2"
django-two-factor-auth = "1.3.1"
djangorestframework = "2.3.12"
docutils = "0.12"
futures = "3.0.5"
guess-language = "0.2"
gunicorn = "19.1.1"
html5lib = "0.999"
httplib2 = "0.9.2"
kombu = "3.0.34"
newrelic = "2.40.0.34"
phonenumbers = "7.2.6"
psycopg2 = "^2.7"
pycrypto = "2.6.1"
python-gnupg = "0.3.8"
python-memcached = "1.57"
pytz = "2015.7"
qrcode = "4.0.4"
raven = "5.27.0"
requests = "2.9.1"
shortuuid = "0.4.3"
six = "1.10.0"
sphinx-me = "0.3"
stripe = "1.30.0"
twilio = "5.4.0"
wsgiref = "0.1.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
