[tool.poetry]
name = "shortdiary"
version = "1.0.0"
description = ""
authors = ["Lukas Martini <hello@lutoma.org>"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "3.9.2"
Babel = "2.2.0"
Django = "^3.1"
Pillow = "3.1.1"
anyjson = "0.3.3"
argparse = "1.2.1"
beautifulsoup4 = "4.3.2"
contextlib2 = "0.5.4"
django-formtools = "^2.0"
django-gravatar2 = "1.4.0"
djangorestframework = "^3.4.7"
docutils = "0.12"
futures = "3.0.5"
gunicorn = "19.1.1"
html5lib = "0.999"
httplib2 = "0.9.2"
psycopg2 = "^2.7"
pycrypto = "2.6.1"
python-gnupg = "0.3.8"
python-memcached = "1.57"
pytz = "2015.7"
qrcode = "4.0.4"
requests = "2.9.1"
shortuuid = "0.4.3"
six = "1.10.0"
sphinx-me = "0.3"
stripe = "1.30.0"
phonenumbers = "^8.12.20"
guess_language-spirit = "^0.5.3"
django-two-factor-auth = "^1.13"
twilio = "^6.55.0"
django-q = "^1.3.5"
redis = "^3.5.3"
pystmark = "^0.5.0"
django-otp-yubikey = "^1.0.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
