[tool.poetry]
name = "shortdiary-backend"
version = "0.1.0"
description = ""
authors = ["Lukas Martini <hello@lutoma.org>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.1"}
python-multipart = "^0.0.5"
fastapi-jwt-auth = "^0.5.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
